# hrs_data_pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
AWS/core/: 01_create_index.py  02_embed_and_bulk_index.py  03_hybrid_search.py  logger.py
AWS/embeddings/: __init__.py  _common_hrs.py  create_embeddings_core.py  create_embeddings_exit.py  create_embeddings_post_exit.py
AWS/exit/: 01_create_index.py  02_embed_and_bulk_index.py  03_hybrid_search.py  logger.py
AWS/post_exit/: 01_create_index.py  02_embed_and_bulk_index.py  03_hybrid_search.py  logger.py
config/: sources.yaml
src/: __init__.py  config_loader.py
src/api/: app.py  dependencies.py
src/api/models/: __init__.py  responses.py
src/api/routes/: __init__.py  categorizer.py  codebooks.py  general.py  search.py  sections.py  utilities.py  variables.py
src/api/static/: app.js  index.html  (+1 more)
src/database/: load_codebook_to_mongodb_atlas.py  load_codebooks.py  mongodb_client.py
src/discovery/: __init__.py  discover_codebooks.py
src/fetch/: __init__.py
src/models/: ahead1993.py  cores.py  exits.py
src/parse/: __init__.py  models.py  parse_ahead_1993.py  parse_ahead_codebooks.py  parse_by_source.py  parse_codebooks.py  parse_core_imputations_codebooks.py  parse_core_supplement.py  parse_early_1992_1994.py  parse_exit_codebook.py  parse_exit_imputations_codebook.py  parse_html_codebook.py  parse_pdf_codebook.py  parse_post_exit_codebook.py  parse_txt_codebook.py  save_codebook.py
src/test/: test_pipeline.py
(+49 files in other folders)
