[project]
name = "hrs-data-pipeline"
version = "0.1.0"
description = "HRS Data Pipeline for discovering, fetching, and parsing codebooks"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
    "pymongo>=4.6.0",
    "pytest",
]

[project.scripts]
hrs-dev = "src.api.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
